--- a/templates/base.html
+++ b/templates/base.html
@@ -1,210 +1,272 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-	<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Montserrat&display=swap"
-		rel="stylesheet" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
-	<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
-	<script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
-	<script >
-		(function () {
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="{{url_for('static', filename='css/style.css')}}"
+      type="text/css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+    <script>
+      (function () {
         emailjs.init("user_ZQ0HbGkCFOUEs2t4X7Yo9");
       })();
-	</script>
-	<script
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWZTBCpz1s2iN98QZxLZd_pBmYWWu1kUs&callback=initMap&libraries=&v=weekly"
-		defer></script>
-	<script src="https://kit.fontawesome.com/8ea4f12082.js" crossorigin="anonymous"></script>
-	<title>Dance Your Way</title>
-</head>
+    </script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWZTBCpz1s2iN98QZxLZd_pBmYWWu1kUs&callback=initMap&libraries=&v=weekly"
+      defer
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/8ea4f12082.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Dance Your Way</title>
+  </head>
 
-<body>
-	<header>
-		<nav>
-			<div class="nav-wrapper purple darken-3">
-				<a href="{{url_for('home')}}" class="brand-logo center">
-					Dance Your Way
-				</a>
-				<a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-				<ul class="right hide-on-med-and-down">
-					{% if session['logged'] == True %}
-					<li><a href="{{url_for('style')}}">Where to Dance</a></li>
-					<li><a href="{{url_for('get_organisers')}}">Organisers</a></li>
-					<li><a href="{{url_for('add_event')}}">Add Event</a></li>
-					<li><a href="{{url_for('sign_out')}}">Log Out</a></li>
-					{% else %}
-					<li><a href="{{url_for('style')}}">Where to Dance</a></li>
-					<li><a href="{{url_for('get_organisers')}}">Organisers</a></li>
-					<li><a href="{{url_for('add_event')}}">Add Event</a></li>
-					<li><a href="{{url_for('signup')}}">Log In/Sign Up</a></li>
-					{% endif %}
-				</ul>
-				{% if session['logged'] == True %}
-				<ul class="left hide-on-med-and-down">
-					<li>
-						<a href="{{url_for('account')}}"><i class="material-icons">account_circle</i></a>
-					</li>
-				</ul>
-				{% endif %}
-			</div>
-		</nav>
+  <body>
+    <header>
+      <nav>
+        <div class="nav-wrapper purple darken-3">
+          <a href="{{url_for('home')}}" class="brand-logo center">
+            Dance Your Way
+          </a>
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+            ><i class="material-icons">menu</i></a
+          >
+          <ul class="right hide-on-med-and-down">
+            {% if session['logged'] == True %}
+            <li><a href="{{url_for('style')}}">Where to Dance</a></li>
+            <li><a href="{{url_for('get_organisers')}}">Organisers</a></li>
+            <li><a href="{{url_for('add_event')}}">Add Event</a></li>
+            <li><a href="{{url_for('sign_out')}}">Log Out</a></li>
+            {% else %}
+            <li><a href="{{url_for('style')}}">Where to Dance</a></li>
+            <li><a href="{{url_for('get_organisers')}}">Organisers</a></li>
+            <li><a href="{{url_for('add_event')}}">Add Event</a></li>
+            <li><a href="{{url_for('signup')}}">Log In/Sign Up</a></li>
+            {% endif %}
+          </ul>
+          {% if session['logged'] == True %}
+          <ul class="left hide-on-med-and-down">
+            <li>
+              <a href="{{url_for('account')}}"
+                ><i class="material-icons">account_circle</i></a
+              >
+            </li>
+          </ul>
+          {% endif %}
+        </div>
+      </nav>
 
-		<ul class="sidenav" id="mobile-demo">
-			<a href="{{url_for('home')}}" class="brand-logo">
-				<img
-            class="brand-logo-image sidenav-logo"
-            src="https://dance-your-way-event-images.s3.eu-central-1.amazonaws.com/salsa-dancer-no-background-v2.jpg"
-            alt="Dance Your Way Logo"
-        /></a>
-				<div class="divider"></div>
-				<div class="center">
-					<a href="{{url_for('home')}}" class="brand-logo purple-text text-darken-3">
-						Dance Your Way
-					</a>
-				</div>
-				<div class="divider"></div>
-				{% if session['logged'] == True %}
-				<li>
-					<a href="{{url_for('account')}}"><i class="material-icons sidenav-icon">account_circle</i>Your
-						Account</a>
-				</li>
-				{% endif %} {% if session['logged'] == True %}
-				<li>
-					<a href="{{url_for('style')}}"><i class="material-icons sidenav-icon">search</i>Where to Dance</a>
-				</li>
-				<li>
-					<a href="{{url_for('get_organisers')}}"><i class="material-icons sidenav-icon">assignment_ind</i>See
-						Organisers</a>
-				</li>
-				<li>
-					<a href="{{url_for('add_event')}}"><i class="material-icons sidenav-icon">add_circle</i>Add
-						Event</a>
-				</li>
-				<li>
-					<a href="{{url_for('sign_out')}}"><i class="material-icons sidenav-icon">close</i>Log Out</a>
-				</li>
-				{% else %}
-				<li>
-					<a href="{{url_for('style')}}"><i class="material-icons sidenav-icon">search</i>Where to Dance</a>
-				</li>
-				<li>
-					<a
-						href="{{url_for('get_organisers')}}"><i class="material-icons sidenav-icon">assignment_ind</i>Organisers</a>
-				</li>
-				<li>
-					<a href="{{url_for('add_event')}}"><i class="material-icons sidenav-icon">add_circle</i>Add
-						Event</a>
-				</li>
-				<li>
-					<a href="{{url_for('signup')}}"><i class="material-icons sidenav-icon">check_circle</i>Log In/Sign
-						Up</a>
-				</li>
-				{% endif %}
-		</ul>
-	</header>
-	<div class="nav-space"></div>
-	{% for message in get_flashed_messages() %}
-	<div class="alert-error center container">{{ message }}</div>
-	{% endfor %} {% block content %} {% endblock %}
-	<footer class="page-footer purple darken-3">
-		<div class="container">
-			<div class="row">
-				<div class="col l6 s12">
-					<h4 class="white-text center">Contact Us</h4>
-					<form onsubmit="return sendMail(this);" class="contact-form">
-						<div class="row">
-							<div class="input-field col s12 m6">
-								<input
+      <ul class="sidenav" id="mobile-demo">
+        <li>
+          <a href="{{url_for('home')}}" class="brand-logo">
+            <img
+              class="brand-logo-image sidenav-logo"
+              src="https://dance-your-way-event-images.s3.eu-central-1.amazonaws.com/salsa-dancer-no-background-v2.jpg"
+              alt="Dance Your Way Logo"
+          /></a>
+          <div class="divider"></div>
+          <div class="center">
+            <a
+              href="{{url_for('home')}}"
+              class="brand-logo purple-text text-darken-3"
+            >
+              Dance Your Way
+            </a>
+          </div>
+          <div class="divider"></div>
+          <ul>
+            {% if session['logged'] == True %}
+            <li>
+              <a href="{{url_for('account')}}"
+                ><i class="material-icons sidenav-icon">account_circle</i>Your
+                Account</a
+              >
+            </li>
+            {% endif %} {% if session['logged'] == True %}
+            <li>
+              <a href="{{url_for('style')}}"
+                ><i class="material-icons sidenav-icon">search</i>Where to
+                Dance</a
+              >
+            </li>
+            <li>
+              <a href="{{url_for('get_organisers')}}"
+                ><i class="material-icons sidenav-icon">assignment_ind</i>See
+                Organisers</a
+              >
+            </li>
+            <li>
+              <a href="{{url_for('add_event')}}"
+                ><i class="material-icons sidenav-icon">add_circle</i>Add
+                Event</a
+              >
+            </li>
+            <li>
+              <a href="{{url_for('sign_out')}}"
+                ><i class="material-icons sidenav-icon">close</i>Log Out</a
+              >
+            </li>
+            {% else %}
+            <li>
+              <a href="{{url_for('style')}}"
+                ><i class="material-icons sidenav-icon">search</i>Where to
+                Dance</a
+              >
+            </li>
+            <li>
+              <a href="{{url_for('get_organisers')}}"
+                ><i class="material-icons sidenav-icon">assignment_ind</i
+                >Organisers</a
+              >
+            </li>
+            <li>
+              <a href="{{url_for('add_event')}}"
+                ><i class="material-icons sidenav-icon">add_circle</i>Add
+                Event</a
+              >
+            </li>
+            <li>
+              <a href="{{url_for('signup')}}"
+                ><i class="material-icons sidenav-icon">check_circle</i>Log
+                In/Sign Up</a
+              >
+            </li>
+            {% endif %}
+          </ul>
+        </li>
+      </ul>
+    </header>
+    <div class="nav-space"></div>
+    {% for message in get_flashed_messages() %}
+    <div class="alert-error center container">{{ message }}</div>
+    {% endfor %} {% block content %} {% endblock %}
+    <footer class="page-footer purple darken-3">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h4 class="white-text center">Contact Us</h4>
+            <form onsubmit="return sendMail(this);" class="contact-form">
+              <div class="row">
+                <div class="input-field col s12 m6">
+                  <input
                     id="subject"
                     name="subject"
                     type="text"
                     class="validate"
                     required
                   />
-								<label class="active" for="subject">Subject</label>
-							</div>
-							<div class="input-field col s12 m6">
-								<input
+                  <label class="active" for="subject">Subject</label>
+                </div>
+                <div class="input-field col s12 m6">
+                  <input
                     id="name"
                     name="name"
                     type="text"
                     class="validate"
                     required
                   />
-								<label class="active" for="name">Your Name</label>
-							</div>
-							<div class="input-field col s12 m6">
-								<input
+                  <label class="active" for="name">Your Name</label>
+                </div>
+                <div class="input-field col s12 m6">
+                  <input
                     id="email"
                     name="email"
                     type="email"
                     class="validate"
                     required
                   />
-								<label class="active" for="email">Email Address</label>
-							</div>
-							<div class="input-field col s12 m6">
-								<input
+                  <label class="active" for="email">Email Address</label>
+                </div>
+                <div class="input-field col s12 m6">
+                  <input
                     id="number"
                     name="number"
                     type="text"
                     class="validate"
                   />
-								<label class="active" for="number"
-                    >Mobile Number</label>
-							</div>
-							<div class="input-field col s12">
-								<textarea
+                  <label class="active" for="number">Mobile Number</label>
+                </div>
+                <div class="input-field col s12">
+                  <textarea
                     id="message"
                     name="message"
                     class="materialize-textarea validate"
                     required
                   ></textarea>
-								<label class="active" for="message">Your Message</label>
-							</div>
-							<div class="center">
-								<button
+                  <label class="active" for="message">Your Message</label>
+                </div>
+                <div class="center">
+                  <button
                     class="btn waves-effect waves-light"
                     type="submit"
                     id="submit"
                   >
                     Send Message<i class="material-icons right">arrow_right</i>
                   </button>
-							</div>
-						</div>
-					</form>
-				</div>
-				<div class="col l4 offset-l2 s12">
-					<h4 class="white-text center">Social Media and Friends</h4>
-					<ul class="center">
-						<li><a class="grey-text text-lighten-3" href="www.facebook.com"
-								target="_blank"><i class="fab fa-facebook"></i> Dance Your Way</a></li>
-						<li><a class="grey-text text-lighten-3" href="www.instagram.com"
-								target="_blank"><i class="fab fa-instagram"></i> Dance Your
-								Way</a></li>
-            <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/groups/545395699629121"
-								target="_blank"><i class="fab fa-facebook"></i> Gusto</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="footer-copyright">
-			<div class="container">
-				© 2020 Copyright Dance Your Way
-			</div>
-		</div>
-	</footer>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-	<script src="{{url_for('static', filename='javascript/sendmail.js')}}"></script>
-	<script>
-		$(document).ready(function () {
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h4 class="white-text center">Social Media and Friends</h4>
+            <ul class="center">
+              <li>
+                <a
+                  class="grey-text text-lighten-3"
+                  href="www.facebook.com"
+                  target="_blank"
+                  ><i class="fab fa-facebook"></i> Dance Your Way</a
+                >
+              </li>
+              <li>
+                <a
+                  class="grey-text text-lighten-3"
+                  href="www.instagram.com"
+                  target="_blank"
+                  ><i class="fab fa-instagram"></i> Dance Your Way</a
+                >
+              </li>
+              <li>
+                <a
+                  class="grey-text text-lighten-3"
+                  href="https://www.facebook.com/groups/545395699629121"
+                  target="_blank"
+                  ><i class="fab fa-facebook"></i> Gusto</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+          © 2020 Copyright Dance Your Way
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="{{url_for('static', filename='javascript/sendmail.js')}}"></script>
+    <script>
+      $(document).ready(function () {
         $(".sidenav").sidenav();
-        $('.modal').modal();
+        $(".modal").modal();
         $(".scrollspy").scrollSpy();
         $("select").formSelect();
         $(".collapsible").collapsible();
@@ -244,7 +306,6 @@
       // forces materialize time picker to display default time in input
       timeInstance._updateTimeFromInput();
       timeInstance.done();
-	</script>
-</body>
-
+    </script>
+  </body>
 </html>
